--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,52 +1,40 @@
-name: Build
-on:
-  push:
-    branches: [ "**" ]
-    tags-ignore: [ "**" ]
-  pull_request:
-  release:
-    types: [ published ]
+name: Build Mod
+
+on: ["push", "pull_request", "workflow_dispatch"]
+
 jobs:
   build:
-    # Only run on PRs if the source branch is on someone else's repo
-    if: ${{ github.event_name != 'pull_request' || github.repository != github.event.pull_request.head.repo.full_name }}
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+
       - uses: gradle/actions/wrapper-validation@v4
+
       - name: Set up JDK
         uses: actions/setup-java@v5
         with:
-          distribution: 'temurin'
-          java-version: 21
-      - uses: gradle/actions/setup-gradle@v4
-        # gradle-build-action doesn't support caching files in the project dir
-      - uses: actions/cache@v4
+          distribution: temurin
+          java-version: 17
+          cache: 'gradle'
+
+      - name: Ensure Gradle wrapper is executable
+        run: chmod +x ./gradlew
+
+      - name: Restore Gradle & Loom caches
+        uses: actions/cache@v4
         with:
           path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
             .gradle/loom-cache
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/libs.versions.*', '**/*.gradle*', '**/gradle-wrapper.properties') }}
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties', '**/libs.versions.*') }}
           restore-keys: ${{ runner.os }}-gradle-
-      - name: Build
-        run: ./gradlew build
-      - name: Determine Status
-        run: |
-          if [ "$(./gradlew properties | awk '/^version:/ { print $2; }' | grep '\-SNAPSHOT')" ]; then
-            echo "STATUS=snapshot" >> $GITHUB_ENV
-          else
-            echo "STATUS=release" >> $GITHUB_ENV
-          fi
-      - name: Publish Snapshot
-        if: "${{ env.STATUS != 'release' && github.event_name == 'push' && github.ref == 'refs/heads/master' }}"
-        run: ./gradlew publish
-        env:
-          ORG_GRADLE_PROJECT_sonatypeUsername: "${{ secrets.SONATYPE_USERNAME }}"
-          ORG_GRADLE_PROJECT_sonatypePassword: "${{ secrets.SONATYPE_PASSWORD }}"
-      - name: Publish Release
-        if: "${{ env.STATUS == 'release' && github.event_name == 'release' }}"
-        run: ./gradlew publishToSonatype closeAndReleaseSonatypeStagingRepository
-        env:
-          ORG_GRADLE_PROJECT_sonatypeUsername: "${{ secrets.SONATYPE_USERNAME }}"
-          ORG_GRADLE_PROJECT_sonatypePassword: "${{ secrets.SONATYPE_PASSWORD }}"
-          ORG_GRADLE_PROJECT_signingKey: "${{ secrets.SIGNING_KEY }}"
-          ORG_GRADLE_PROJECT_signingPassword: "${{ secrets.SIGNING_PASSWORD }}"
+
+      - name: Build mod
+        run: ./gradlew --no-daemon clean build
+
+      - name: Upload built mod jar
+        uses: actions/upload-artifact@v4
+        with:
+          name: fabric-permissions-api
+          path: build/libs/*.jar
